test/org/midica/testfiles/failing/call-if-not-alone.midica
INCLUDE inc/instruments.midica

VAR $x = 1

CALL test if=$x, if $x

FUNCTION test
	0  c  /4
END
